--- a/RadarTriangulation.ipynb
+++ b/RadarTriangulation.ipynb
@@ -2,36 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cfa11918",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-16 16:42:33,230\tINFO worker.py:1718 -- Calling ray.init() again after it has already been called.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ray initialized with 11 cores for Modin.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
-    "import pandas as pd\n",
     "import scipy.io as sio\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "e2e0a66f",
    "metadata": {},
    "outputs": [],
@@ -51,13 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e0b8d406",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load radar data for mat files\n",
     "def load_radar_data(participant_dir, radar_id, pattern):\n",
+    "    \"\"\"\n",
+    "    Load UWB radar data from .mat files for given participant, radar, and pattern.\n",
+    "    Returns:\n",
+    "        env: 2D numpy array of envelope data\n",
+    "        bins: 1D numpy array of range bins (meters)\n",
+    "        ts: 1D numpy array of timestamps (seconds)\n",
+    "    \"\"\"\n",
     "    base = os.path.join(participant_dir, radar_id, pattern)\n",
     "\n",
     "    env_mat = sio.loadmat(os.path.join(base, \"envNoClutterscans.mat\"))\n",
@@ -98,14 +89,14 @@
     "\n",
     "# Time windows\n",
     "def generate_time_windows(t_list, window_size=0.25, step=0.125):\n",
-    "    t_min = max(t[0] for t in t_list)\n",
-    "    t_max = min(t[-1] for t in t_list)\n",
+    "    t_min = max(t[0] for t in t_list) # latest start time\n",
+    "    t_max = min(t[-1] for t in t_list) # earliest end time\n",
     "\n",
-    "    windows = []\n",
-    "    t = t_min\n",
-    "    while t + window_size <= t_max:\n",
-    "        windows.append((t, t + window_size))\n",
-    "        t += step\n",
+    "    windows = [] # list of (start, end) tuples\n",
+    "    t = t_min # start of first window \n",
+    "    while t + window_size <= t_max: # ensure window fits\n",
+    "        windows.append((t, t + window_size)) # add window\n",
+    "        t += step # move to next window\n",
     "    return windows\n",
     "\n",
     "# Radii per window (cap strongest bins)\n",
@@ -114,21 +105,21 @@
     "    Return up to top_k range values (meters) whose envelope exceeds thresh\n",
     "    in the given time window.\n",
     "    \"\"\"\n",
-    "    mask = (ts >= t_start) & (ts <= t_end)\n",
-    "    idx = np.where(mask)[0]\n",
-    "    if idx.size == 0:\n",
+    "    mask = (ts >= t_start) & (ts <= t_end) # time window mask\n",
+    "    idx = np.where(mask)[0] # indices in window\n",
+    "    if idx.size == 0: # no data in window\n",
     "        return np.array([])\n",
     "\n",
-    "    env_win = env[idx, :]\n",
-    "    env_max = env_win.max(axis=0)\n",
+    "    env_win = env[idx, :] # envelope in window\n",
+    "    env_max = env_win.max(axis=0) # max per range bin\n",
     "\n",
-    "    active = np.where(env_max > thresh)[0]\n",
-    "    if active.size == 0:\n",
-    "        return np.array([])\n",
+    "    active = np.where(env_max > thresh)[0] # bins above threshold\n",
+    "    if active.size == 0: # no active bins\n",
+    "        return np.array([]) \n",
     "\n",
-    "    if active.size > top_k:\n",
-    "        strongest = active[np.argsort(env_max[active])[-top_k:]]\n",
-    "        active = strongest\n",
+    "    if active.size > top_k: # limit to top_k strongest bins\n",
+    "        strongest = active[np.argsort(env_max[active])[-top_k:]] # indices of top_k\n",
+    "        active = strongest # update active bins\n",
     "\n",
     "    return bins[active]\n",
     "\n",
@@ -148,16 +139,17 @@
     "    x_vals = []  # Radar 109\n",
     "    y_vals = []  # Radar 108\n",
     "\n",
-    "    for (ts, te) in windows:\n",
-    "        r108 = get_radii_for_window(env108, b108, t108, ts, te, thresh)\n",
-    "        r109 = get_radii_for_window(env109, b109, t109, ts, te, thresh)\n",
+    "    for (ts, te) in windows: # for each time window\n",
+    "        # get active radii per radar\n",
+    "        r108 = get_radii_for_window(env108, b108, t108, ts, te, thresh) # Radar 108\n",
+    "        r109 = get_radii_for_window(env109, b109, t109, ts, te, thresh) # Radar 109\n",
     "\n",
-    "        if r108.size == 0 or r109.size == 0:\n",
+    "        if r108.size == 0 or r109.size == 0: # no data for either radar\n",
     "            continue\n",
     "\n",
     "        # representative radius per radar (you could also use min/max)\n",
-    "        y_vals.append(r108.mean())\n",
-    "        x_vals.append(r109.mean())\n",
+    "        y_vals.append(r108.mean()) # Radar 108\n",
+    "        x_vals.append(r109.mean()) # Radar 109\n",
     "\n",
     "    return np.array(x_vals), np.array(y_vals)\n",
     "\n",
@@ -190,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "5fe5e25f",
    "metadata": {},
    "outputs": [
@@ -224,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "b0730ea7",
    "metadata": {},
    "outputs": [
@@ -256,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "c6df87d5",
    "metadata": {},
    "outputs": [
@@ -293,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "877f02f3",
    "metadata": {},
    "outputs": [
@@ -330,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "6d28bb8f",
    "metadata": {},
    "outputs": [
@@ -366,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "9d7d9e64",
    "metadata": {},
    "outputs": [
@@ -402,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "c21493cb",
    "metadata": {},
    "outputs": [
@@ -439,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "3022550b",
    "metadata": {},
    "outputs": [
@@ -476,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "fffd0df4",
    "metadata": {},
    "outputs": [
